--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,31 +11,16 @@ body {
   background: #222;
 }
 
-ul.navbar-nav { list-style-type: none; padding: 0; clear: both; }
-ul.navbar-nav a { float: left; text-decoration: none;
-  display: block; padding: 5px 0.5em; }
-ul.navbar-nav a:hover { background-color: rgba(0,0,0,0.33); }
-ul.navbar-nav li.active a { color: #fff; border: 1px solid rgba(99,99,99,0.5);
-  border-bottom: none;
-  background-color: rgba(0,0,0,0.33); }
-.tabsplit {
-  border-bottom: 2px solid rgba(99,99,99,0.5); }
+h1 { margin: 0.2em; }
 
-ul.show-nav { list-style-type: none; padding: 0; }
-ul.show-nav li { width: 50%; padding: 5px; float: left; }
-ul.show-nav a { width: 100%; display: block; text-decoration: none;
-  padding: 5px; text-align: center; background-color: rgba(0,0,0,0.33);
-  border: 1px solid rgba(255,255,255,0.2); color: #999; }
-ul.show-nav li.active a,ul.showsection-nav a:hover { color: white;
-  background-color: rgba(0,0,0,1); }
-
-ul.showsection-nav { list-style-type: none; padding: 0; }
-ul.showsection-nav li { width: 50%; padding: 5px; float: left; }
-ul.showsection-nav a { width: 100%; display: block; text-decoration: none;
-  padding: 5px; text-align: center; background-color: rgba(0,0,0,0.33);
-  border: 1px solid rgba(255,255,255,0.2); color: #999; }
-ul.showsection-nav li.active a,ul.showsection-nav a:hover { color: white;
-  background-color: rgba(0,0,0,1); }
+ul.navbar-nav { list-style-type: none; padding: 0; clear: both; margin: 0; }
+ul.navbar-nav li { width: 50%; padding: 5px; float: left; }
+ul.navbar-nav a { width: 100%; display: block; text-decoration: none;
+  padding: 5px; text-align: center; color: #999;
+  border: 1px solid rgba(255,255,255,0.2); background-color: rgba(0,0,0,0.33); }
+ul.navbar-nav li.active a,ul.showsection-nav a:hover { color: white;
+  border: 1px solid rgba(100,100,255,0.6);
+  background-color: rgba(40,40,120,0.2); }
 
 a { color: #cc9; }
 .main { padding: 1em; }
