--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,6 +26,11 @@ ul.navbar-nav li.active a,ul.showsection-nav a:hover { color: white;
 a { color: #cc9; }
 .main { padding: 1em; }
 
+ul.eplist li { list-style-type: none; margin-bottom: 1em; }
+ul.eplist li div.num { float: left; margin-left: 0; }
+ul.eplist li div { margin-left: 3em; }
+ul.eplist li div.record-date span { color: #aaa; font-size: small; }
+
 footer { clear: both; padding: 20px 40px;
     border-top: 2px solid #333;
     background: rgba(0, 0, 0, .50); }
