--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,9 @@
 .splash { margin: 1em; }
 .loader { font-size: 50%; position: absolute; top: 5; left: 5; }
 
+.good { color: green; }
+.bad { color: red; }
+
 html, body { height: 100%; }
 
 body {
@@ -31,7 +34,7 @@ div.left { width: 30%; float: left; }
 div.right { width: 70%; float: right; padding-left: 1em; }
 
 ul.navbar-nav { list-style-type: none; padding: 0; clear: both; margin: 0; }
-ul.navbar-nav li { width: 33.333%; padding: 5px; float: left; }
+ul.navbar-nav li { width: 20%; padding: 5px; float: left; }
 ul.navbar-nav a { width: 100%; display: block; text-decoration: none;
   padding: 5px; text-align: center; color: #999;
   border: 1px solid rgba(255,255,255,0.2); background-color: rgba(0,0,0,0.33); }
@@ -40,7 +43,7 @@ ul.navbar-nav li.active a,ul.showsection-nav a:hover { color: white;
   background-color: rgba(40,40,120,0.2); }
 
 a { color: #cc9; }
-.main { padding: 1em; }
+.main { padding: 1em; padding-top: 0; }
 
 ul.eplist li { list-style-type: none; margin-bottom: 1em; }
 ul.eplist li div.num { float: left; margin-left: 0; }
@@ -60,6 +63,8 @@ li div.date span { color: #aaa; font-size: small; }
 .event-display ul { padding: 0; list-style-type: none; }
 
 .info-form .info-section { clear: both; }
+
+.social-form { max-width: 40em; padding: 1em; }
 
 footer { clear: both; padding: 20px 40px;
     margin-top: 4em;
