--- a/styles/styles.css
+++ b/styles/styles.css
@@ -64,7 +64,7 @@ li div.date span { color: #aaa; font-size: small; }
 
 .info-form .info-section { clear: both; }
 
-.social-form { max-width: 40em; padding: 1em; }
+.stream-form { max-width: 40em; padding: 1em; }
 
 footer { clear: both; padding: 20px 40px;
     margin-top: 4em;
